--- a/.macOS_bash_local_config
+++ b/.macOS_bash_local_config
@@ -1,7 +1,7 @@
 # used for macOS
 
 # Add cabal installed executables to PATH
-export PATH="$HOME/Library/Haskell/bin:$PATH"
+#export PATH="$HOME/Library/Haskell/bin:$PATH"
 
 # command aliases
 alias airport='/System/Library/PrivateFrameworks/Apple80211.framework/Versions/A/Resources/airport'
