Fix mistake changing file
I forgot that .gitconfig is symlinked as my actual file, there is
not a copy like my irssi config or gistpush script.  Oops.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = <name>
-	email = <email>
+    name = Chad Reynolds        # <name>
+    email = cjreynol13@aol.com  # <email>
 [core]
 	editor = vim
 	excludesfile = ~/.gitignore_global
