Clean up some files from the linux side
Had line ending issues with the .bash_alias file, was causing failures with
setting those aliases.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [user]
-    name = Chad Reynolds        # <name>
-    email = cjreynol13@aol.com  # <email>
+  name = Chad Reynolds        # <name>
+  email = cjreynol13@aol.com  # <email>
+[init]
+  defaultBranch = main
 [core]
 	editor = vim
 	excludesfile = ~/.gitignore_global
