--- a/.screenrc
+++ b/.screenrc
@@ -15,11 +15,14 @@ bind l focus right
 
 # persistent display at the bottom of the screen
 #hardstatus alwayslastline "%{=b}%{G} Screen(s): %{b}%w %=%{kG}%C%A  %D, %Y/%M/%d "
-hardstatus alwayslastline "%{=b}%{C}Session - %S %{W}| %{G}Current Window = (*%n) %t %{W}| %{-b}%{Y}Other Windows - [%W] %=%{r}%m/%d - %C%A
+hardstatus alwayslastline "%{=b}%{C}Session - %S %{W}| %{G}Current Window = (*%n) %t %{W}| %{-b}%{Y}Other Windows - [%W] %=%{r}%m/%d - %C%A"
 
 # persist layouts when de/re-attatching to a screen session
 layout autosave on
 layout save default # layout saving only works for named layouts
+
+# force screen to run as a login shell (making it source my .bash_profile)
+shell -$SHELL
 
 # #####################
 # automating window/layout setup
@@ -40,7 +43,8 @@ layout select default
 
 # split and populate window regions
 select 0
-split -V
+split -v
 focus right
 select 2
 focus left
+
